Bug 82078 - FILEOPEN: RTF - Bold text spilling over to non-bold text
Summary: FILEOPEN: RTF - Bold text spilling over to non-bold text
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0
Keywords: bibisectRequest, filter:rtf, regression
: 82079 (view as bug list)
Depends on:
Blocks: RTF-Character
  Show dependency treegraph
 
Reported: 2014-08-03 01:26 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-10-31 05:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Word 2013 VS LibO 4.3.1 (78.19 KB, image/png)
2014-08-03 01:26 UTC, Yousuf Philips (jay) (retired)
Details
sample file (1.43 MB, application/rtf)
2014-08-23 13:55 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-08-03 01:26:01 UTC
Created attachment 103889 [details]
Word 2013 VS LibO 4.3.1

Steps:
1) Open attachment 103815 [details] in Word 2013 and convert to RTF, else open < https://drive.google.com/file/d/0B6qJrVIa0SAlbHNZaDRsYlVpQkU/edit?usp=sharing >
2) Scroll down to page 28
3) See that the bold text 'Connect. This will open a remote'
4) The bold attribute was only set to 'Connect.'

Tested in 4.3.1, 4.2.5, and 3.3.0. It seems that because the period is in bold, its not stopping the bold from continuing. You can see other bold text on the page which has a period following it, but the period in those cases isnt bold.
Comment 1 Owen Genat (retired) 2014-08-23 12:03:49 UTC
(In reply to comment #0)
> 2) Scroll down to page 28
> 3) See that the bold text 'Connect. This will open a remote'
> 4) The bold attribute was only set to 'Connect.'

Confirmed under GNU/Linux using:

- v4.1.6.2 Build ID: 40ff705089295be5be0aae9b15123f687c05b0a
- v4.2.5.2 Build ID: 61cb170a04bb1f12e77c884eab9192be736ec5f5
- v4.4.0.0.alpha0+ Build ID: e379401618268ed7f7f5885a36b90e1f4f6cd4af TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-08-18_05:51:03

Under GNU/Linux using v3.5.7.2 Build ID: 3215f89-f603614-ab984f2-7348103-1225a5b only "Connect. " (including trailing space) is set in bold. Status set to NEW.
Comment 2 Yousuf Philips (jay) (retired) 2014-08-23 13:53:52 UTC
Thanks Owen for catching that it was fixed in 3.5.7, so that means its a regression. Tested that its broken in 3.6.7.
Comment 3 Yousuf Philips (jay) (retired) 2014-08-23 13:55:25 UTC
Created attachment 105156 [details]
sample file
Comment 4 Commit Notification 2014-09-06 16:57:09 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=321d7ec2071472b3765a00806715e7ad9f8a306f

fdo#82078 RTF import: fix bold text spilling over to non-bold text



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2014-09-11 14:22:01 UTC
*** Bug 82079 has been marked as a duplicate of this bug. ***
Comment 6 Robinson Tryon (qubit) 2015-12-17 10:48:52 UTC Comment hidden (obsolete)