fdo#82078 RTF import: fix bold text spilling over to non-bold text

Regression from commit 41890bf714803969515578b47e63fa9730ea7090
(fdo#54473 fdo#57133 fix RTF import of character styles, 2012-12-04),
the problem was that the style undoing magic introduced in
1be0a3fa9ebb22b607c54b47739d4467acfed259 (n#825305: writerfilter RTF
import: override style properties like Word, 2014-06-17) was not used
for character styles.

Change-Id: Id31cfd5574a83bcf2895f0c2fd496fa60791cbb3